--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.8.1"
+androidMidiLib = "f8f2a6645"
 firebaseUiAuth = "8.0.2"
 glide = "4.16.0"
 junit = "4.13.2"
@@ -19,6 +20,7 @@ navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
 
 [libraries]
+android-midi-lib = { module = "com.github.LeffelMania:android-midi-lib", version.ref = "androidMidiLib" }
 firebase-ui-auth = { module = "com.firebaseui:firebase-ui-auth", version.ref = "firebaseUiAuth" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
