--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation libs.navigation.ui
     implementation libs.glide
     implementation libs.android.midi.lib
+    implementation libs.materialnumberpicker
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
