--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation libs.glide
     implementation libs.android.midi.lib
     implementation libs.materialnumberpicker
+    implementation libs.play.services.cronet
+
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
